# plai-hask

./: README.md  plai-hask.cabal  stack.yaml
app/: Main.hs  Main1.hs  Main2.hs  Main3.hs
src/: Chapter5.hs  Chapter6.hs  SExprParser.hs
test/: Main3Test.hs  Main6Test.hs  Spec.hs  TestMain3.hs
