name:                plai-hask
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/plai-hask#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SExprParser, Chapter5, Chapter6
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
                     , vector
                     , transformers
                     , mtl
                     , tasty
                     , HUnit
                     , QuickCheck
                     , tasty-hunit
                     , tasty-quickcheck                     
  default-language:    Haskell2010

executable main1-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , containers
                     , vector
                     , transformers
                     , mtl
                     , plai-hask
  default-language:    Haskell2010

executable main2-exe
  hs-source-dirs:      app
  main-is:             Main2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , containers
                     , vector
                     , transformers
                     , mtl
                     , plai-hask               
  default-language:    Haskell2010

executable main3-exe
  hs-source-dirs:      app
  main-is:             Main3.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , containers
                     , vector
                     , transformers
                     , mtl
                     , plai-hask               
  default-language:    Haskell2010

executable qc-exe
  hs-source-dirs:      app
  main-is:             TestQuickCheck.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , containers
                     , vector
                     , transformers
                     , mtl
  default-language:    Haskell2010      

test-suite plai-hask-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , plai-hask
                     , tasty
                     , tasty-auto
                     , HUnit
                     , QuickCheck
                     , tasty-hunit
                     , tasty-quickcheck
                     , parsec
                     , vector
                     , containers
                     , plai-hask
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/plai-hask
